@@ -192,6 +192,8 @@ See the end of the file for license conditions.
   - bug #65743: Arithmetic's collapse-number mistakenly calculating
     collapse-median instead. Reported by Sepideh Eskandarlou.
 
+  - bug #65822: MakeProfiles does not write negative values with --replace.
+
 
 
 
